--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -55,11 +55,11 @@ mybatis:
     type-aliases-package: com.example.demo.bean
     mapper-locations: classpath:com/example/mapper/*.xml
 
-##zk配置
+#zk配置
 zookeeper:
     connect: 10.0.12.53:2181
 
-
+#pagehelper分页
 pagehelper:
     offsetAsPageNum: true
     rowBoundsWithCount: true
@@ -72,7 +72,7 @@ kafka:
   brokers : 192.168.1.81:9431
   groupid : test-group
 
-
+#memcache配置
 memcache:
   servers: 192.168.1.55:11211
   weights: 5
