多环境配制

--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,7 @@
         <dependency>
             <groupId>com.oracle</groupId>
             <artifactId>ojdbc14</artifactId>
-            <version>${oracle.version}</version>
+            <version>11.2.0.3</version>
         </dependency>
 
         <dependency>
@@ -183,6 +183,36 @@
 
 
     </dependencies>
+
+
+
+    <profiles>
+        <profile>
+            <!-- 本地开发环境 -->
+            <id>local</id>
+            <properties>
+                <profiles.env>local</profiles.env>
+            </properties>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+        </profile>
+        <profile>
+            <!-- 测试环境 -->
+            <id>test</id>
+            <properties>
+                <profiles.env>test</profiles.env>
+            </properties>
+        </profile>
+        <profile>
+            <!-- 生产环境 -->
+            <id>prod</id>
+            <properties>
+                <profiles.env>prod</profiles.env>
+                <!--<deploy.url>http://host:port/manager/text</deploy.url>-->
+            </properties>
+        </profile>
+    </profiles>
 
     <build>
         <plugins>
