--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,12 @@
             <version>1.16.6</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.3.2</version>
+        </dependency>
+
         <!--zk-->
         <dependency>
             <groupId>org.apache.curator</groupId>
