--- a/pom.xml
+++ b/pom.xml
@@ -224,6 +224,14 @@
         </dependency>
 
 
+        <!-- netty -->
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>5.0.0.Alpha1</version>
+        </dependency>
+
+
     </dependencies>
 
 
